--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -52,10 +52,16 @@
     <item>EQUITY</item>
     <item>ETF</item>
     <item>OPTION</item>
+    <item>INDEX</item>
+    <item>MUTUALFUND</item>
+    <item>FUTURE</item>
   </string-array>
   <string-array name="quoteTypes">
     <item>Stock</item>
     <item>ETF</item>
     <item>Option</item>
+    <item>Index</item>
+    <item>Bond</item>
+    <item>Future</item>
   </string-array>
 </resources>
