--- a/app/src/main/res/layout/fragment_summarygroup.xml
+++ b/app/src/main/res/layout/fragment_summarygroup.xml
@@ -20,6 +20,7 @@
       >
 
     <TextView
+        android:id="@+id/summarySectionHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -44,7 +45,9 @@
         android:contentDescription="Aliens"
         />
 
-    <View style="@style/Divider"/>
+    <View style="@style/Divider"
+        android:id="@+id/summaryDivider"
+        />
 
     <TextView
         android:layout_width="wrap_content"
