--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -56,5 +56,6 @@
     <item>Bond</item>
     <item>Future</item>
     <item>Währung</item>
+    <item>Kryptowährung</item>
   </string-array>
 </resources>
