--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -28,13 +28,34 @@
 
         <TextView
             android:id="@+id/textViewSymbol"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.0"
             style="@style/stock_item_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/guidelineVert"
+            app:layout_constraintEnd_toStartOf="@+id/imageViewSymbol"
+            />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/imageViewSymbol"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintTop_toTopOf="@+id/textViewSymbol"
+            app:layout_constraintBottom_toBottomOf="@id/textViewSymbol"
+            app:layout_constraintStart_toEndOf="@id/textViewSymbol"
+            app:layout_constraintEnd_toStartOf="@id/textViewSymbol2"
+            />
+
+        <TextView
+            android:id="@+id/textViewSymbol2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineVert"
             />
 
         <TextView
@@ -49,7 +70,7 @@
             />
 
         <TextView
-           android:id="@+id/textViewMarketPrice"
+            android:id="@+id/textViewMarketPrice"
             android:layout_width="wrap_content"
             style="@style/stock_item_text"
             android:layout_height="wrap_content"
@@ -84,7 +105,7 @@
             />
 
         <TextView
-            android:id="@+id/textViewMarketPriceDelayed"
+           android:id="@+id/textViewMarketPriceDelayed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
