--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -56,6 +56,7 @@
     <item>MUTUALFUND</item>
     <item>FUTURE</item>
     <item>CURRENCY</item>
+    <item>CRYPTOCURRENCY</item>
   </string-array>
   <string-array name="quoteTypes">
     <item>Stock</item>
@@ -65,5 +66,6 @@
     <item>Bond</item>
     <item>Future</item>
     <item>Currency</item>
+    <item>Cryptocurrency</item>
   </string-array>
 </resources>
