--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -26,27 +26,26 @@
           android:layout_margin="16dp"
           >
 
+        <ImageView
+            android:id="@+id/imageViewSymbol"
+            android:visibility="gone"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/textViewSymbol"
+            app:layout_constraintBottom_toBottomOf="@id/textViewSymbol"
+            app:layout_constraintEnd_toStartOf="@id/textViewSymbol"
+            />
+
         <TextView
             android:id="@+id/textViewSymbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/stock_item_text"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageViewSymbol"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageViewSymbol"
-            />
-
-        <ImageView
-            android:visibility="gone"
-            android:id="@+id/imageViewSymbol"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textViewSymbol"
-            app:layout_constraintBottom_toBottomOf="@id/textViewSymbol"
-            app:layout_constraintStart_toEndOf="@id/textViewSymbol"
-            app:layout_constraintEnd_toStartOf="@id/textViewSymbol2"
+            app:layout_constraintEnd_toStartOf="@+id/textViewSymbol2"
             />
 
         <TextView
