--- a/app/src/main/res/layout/summarygroup_item.xml
+++ b/app/src/main/res/layout/summarygroup_item.xml
@@ -29,6 +29,18 @@
       app:layout_constraintTop_toTopOf="parent"
       />
   <TextView
+      android:id="@+id/summaryItemDataSubDesc"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="4dp"
+      android:textSize="11sp"
+      android:maxLines="1"
+      android:ellipsize="end"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline1"
+      app:layout_constraintTop_toBottomOf="@+id/summaryItemDataDesc"
+      />
+  <TextView
       android:id="@+id/summaryItemData1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
@@ -38,7 +50,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/summaryItemDataDesc"
+      app:layout_constraintTop_toBottomOf="@+id/summaryItemDataSubDesc"
       app:layout_constraintVertical_bias="0.0"
       />
 
@@ -52,7 +64,7 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@+id/guideline2"
-      app:layout_constraintTop_toBottomOf="@+id/summaryItemDataDesc"
+      app:layout_constraintTop_toBottomOf="@+id/summaryItemDataSubDesc"
       app:layout_constraintVertical_bias="0.0"
       />
 
