--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,8 +5,8 @@
     <item>Short Summary</item>
     <item>List</item>
     <item>Tile</item>
-    <item>Small list</item>
-    <item>Small tile</item>
+    <item>Small List</item>
+    <item>Small Tile</item>
     <item>Table</item>
     <item>Block</item>
     <item>Summary</item>
@@ -20,8 +20,8 @@
     <item>Short Summary</item>
     <item>List</item>
     <item>Tile</item>
-    <item>Small list</item>
-    <item>Small tile</item>
+    <item>Small List</item>
+    <item>Small Tile</item>
     <item>Table</item>
     <item>Block</item>
     <item>Summary</item>
