--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -33,24 +33,15 @@
           android:layout_width="match_parent"
           style="@style/Divider"
           app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
-          app:layout_constraintBottom_toTopOf="@id/textViewListText"
-          android:layout_marginBottom="8dp"
-          />
-
-      <TextView
-          android:id="@+id/textViewListText"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_margin="8dp"
-          app:layout_constraintTop_toBottomOf="@+id/overviewDivider"
           app:layout_constraintBottom_toTopOf="@id/recyclerview"
+          android:layout_marginBottom="8dp"
           />
 
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerview"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          app:layout_constraintTop_toBottomOf="@id/textViewListText"
+          app:layout_constraintTop_toBottomOf="@id/overviewDivider"
           app:layout_constraintBottom_toBottomOf="parent"
           android:padding="@dimen/small_padding" />
 
