--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -120,6 +120,8 @@
             android:layout_height="wrap_content"
             android:textSize="13sp"
             app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@id/textViewName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guidelineVert"
@@ -132,6 +134,7 @@
             android:layout_marginTop="8dp"
             android:gravity="end"
             app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/guidelineVert"
             app:layout_constraintTop_toBottomOf="@+id/textViewMarketPriceDelayed"
             app:layout_constraintEnd_toEndOf="parent"
