add small tile view 2

--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -6,7 +6,8 @@
     <item>Liste</item>
     <item>Übersicht</item>
     <item>Kleine Liste</item>
-    <item>Kleine Übersicht</item>
+    <item>Kleine Übersicht 1</item>
+    <item>Kleine Übersicht 2</item>
     <item>Tabelle</item>
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
@@ -21,7 +22,8 @@
     <item>Liste</item>
     <item>Übersicht</item>
     <item>Kleine Liste</item>
-    <item>Kleine Übersicht</item>
+    <item>Kleine Übersicht 1</item>
+    <item>Kleine Übersicht 2</item>
     <item>Tabelle</item>
     <item>Blockansicht</item>
     <item>Zusammenfassung</item>
