--- a/app/src/main/res/layout/stockroom_smalltile1_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile1_item.xml
@@ -24,8 +24,9 @@
       />
 
   <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/smalltile_textViewSymbolLayout"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -33,8 +34,9 @@
       >
     <TextView
         android:id="@+id/smalltile_textViewSymbol"
+        android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +48,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/smalltile_textViewMarketPriceLayout"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
       app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +57,7 @@
     <TextView
         android:id="@+id/smalltile_textViewMarketPrice"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="end"
         android:textSize="12sp"
         android:layout_marginEnd="2dp"
