--- a/app/src/main/res/layout/stockroom_smalltile1_item.xml
+++ b/app/src/main/res/layout/stockroom_smalltile1_item.xml
@@ -26,7 +26,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/smalltile_textViewSymbolLayout"
       android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -36,7 +36,7 @@
         android:id="@+id/smalltile_textViewSymbol"
         android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
