--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -42,8 +42,48 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/overviewDivider"
-          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintBottom_toTopOf="@id/overviewDividerSelection"
           android:padding="@dimen/small_padding" />
+
+      <View
+          android:id="@+id/overviewDividerSelection"
+          android:layout_width="match_parent"
+          style="@style/Divider"
+          app:layout_constraintTop_toBottomOf="@+id/recyclerview"
+          android:layout_marginTop="8dp"
+          android:layout_marginBottom="12dp"
+          app:layout_constraintBottom_toTopOf="@id/addSelectionButton"
+          />
+
+      <ImageButton
+          android:id="@+id/addSelectionButton"
+          android:contentDescription="@string/add_selection"
+          android:src="@drawable/ic_action_add_circle_outline"
+          style="@style/asset_item_imagebutton"
+          app:layout_constraintTop_toBottomOf="@id/overviewDividerSelection"
+          app:layout_constraintBottom_toTopOf="@id/recyclerviewSelection"
+          app:layout_constraintEnd_toStartOf="@id/removeSelectionButton"
+          />
+
+      <ImageButton
+          android:id="@+id/removeSelectionButton"
+          android:contentDescription="@string/remove_selection"
+          android:src="@drawable/ic_action_remove_circle_outline"
+          style="@style/asset_item_imagebutton"
+          app:layout_constraintTop_toTopOf="@id/addSelectionButton"
+          app:layout_constraintBottom_toBottomOf="@id/addSelectionButton"
+          app:layout_constraintEnd_toEndOf="parent"
+          />
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recyclerviewSelection"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          app:layout_constraintTop_toBottomOf="@id/addSelectionButton"
+          app:layout_constraintBottom_toBottomOf="parent"
+          android:padding="@dimen/small_padding"
+          android:layout_marginTop="8dp"
+          />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
