--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -60,6 +60,7 @@
           android:contentDescription="@string/add_selection"
           android:src="@drawable/ic_action_add_circle_outline"
           style="@style/asset_item_imagebutton"
+          android:layout_marginEnd="32dp"
           app:layout_constraintTop_toBottomOf="@id/overviewDividerSelection"
           app:layout_constraintBottom_toTopOf="@id/recyclerviewSelection"
           app:layout_constraintEnd_toStartOf="@id/removeSelectionButton"
@@ -70,6 +71,7 @@
           android:contentDescription="@string/remove_selection"
           android:src="@drawable/ic_action_remove_circle_outline"
           style="@style/asset_item_imagebutton"
+          android:layout_marginEnd="32dp"
           app:layout_constraintTop_toTopOf="@id/addSelectionButton"
           app:layout_constraintBottom_toBottomOf="@id/addSelectionButton"
           app:layout_constraintEnd_toEndOf="parent"
