--- a/app/src/main/res/layout/dialog_add_filter.xml
+++ b/app/src/main/res/layout/dialog_add_filter.xml
@@ -91,7 +91,7 @@
             android:id="@+id/filterDoubleValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:gravity="end"
             android:imeOptions="actionDone"
             android:digits="-0123456789.,"
@@ -128,7 +128,7 @@
             android:id="@+id/filterIntValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:gravity="end"
             android:imeOptions="actionDone"
             android:digits="0123456789"
@@ -165,7 +165,7 @@
             android:id="@+id/filterTextValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:inputType="textShortMessage"
             android:gravity="end"
             android:imeOptions="actionDone"
