--- a/app/src/main/res/layout/dialog_add_filtername.xml
+++ b/app/src/main/res/layout/dialog_add_filtername.xml
@@ -30,7 +30,7 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/addFilterName"
-        android:background="@color/design_default_color_background"
+        android:background="@color/textInputEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textShortMessage"
