--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -7,6 +7,7 @@
 
   <xyz.sangcomz.stickytimelineview.TimeLineRecyclerView
       android:id="@+id/timeline_recycler_view"
+      app:sectionBackgroundColor="@color/white"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
