--- a/app/src/main/res/layout/dialog_add_dividend.xml
+++ b/app/src/main/res/layout/dialog_add_dividend.xml
@@ -42,7 +42,7 @@
             android:id="@+id/addDividend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:digits="0123456789.,"
             android:gravity="end"
             android:imeOptions="actionDone"
@@ -77,7 +77,7 @@
             android:id="@+id/addNote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:inputType="textMultiLine"
             />
       </com.google.android.material.textfield.TextInputLayout>
