--- a/app/src/main/res/layout/dialog_rename_symbol.xml
+++ b/app/src/main/res/layout/dialog_rename_symbol.xml
@@ -51,7 +51,7 @@
       >
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/symbolNew"
-        android:background="@color/design_default_color_background"
+        android:background="@color/textInputEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textCapCharacters"
