--- a/app/src/main/res/layout/dialog_set_annual_dividend.xml
+++ b/app/src/main/res/layout/dialog_set_annual_dividend.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:background="@color/design_default_color_background"
+            android:background="@color/textInputEditText"
             android:inputType="numberDecimal"
             android:digits="0123456789.,"
             android:imeOptions="actionDone"
