--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -42,4 +42,10 @@
     <item>Währung</item>
     <item>Kryptowährung</item>
   </string-array>
+  <string-array name="app_theme">
+    <item>Systemstandardeinstellung</item>
+    <item>Hell</item>
+    <item>Dunkel</item>
+    <item>Automatisch entsprechend dem Batteriestand</item>
+  </string-array>
 </resources>
