--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,11 +15,17 @@ limitations under the License. -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+    <item name="actionBarTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
+  </style>
+
+  <style name="ThemeOverlay.AppTheme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <!-- title text color -->
+    <item name="android:textColorPrimary">#ffffff</item>
   </style>
 
   <style name="stock_item_text">
@@ -77,7 +83,7 @@ limitations under the License. -->
   <style name="table_item_vertical_line">
     <item name="android:layout_width">1dp</item>
     <item name="android:layout_height">0dp</item>
-    <item name="android:background">@color/cardview_dark_background</item>
+    <item name="android:background">@color/verticalLine</item>
   </style>
 
   <style name="stock_item">
