--- a/app/src/main/res/layout/stockroom_smalllist_item.xml
+++ b/app/src/main/res/layout/stockroom_smalllist_item.xml
@@ -14,7 +14,7 @@
   <TextView
       android:id="@+id/smalllist_itemview_group"
       android:layout_width="0dp"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
       android:background="@drawable/group_item_bg"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
